# MicroFisher

./: .gitignore  DB_index_build.sh  DBs_stat.sh  Pipeline_usage_and_comparison.sh  Pipeline_usage_and_comparison_Miseq.sh  Pipeline_usage_and_comparison_NovaSeq.sh  README.md  compare_with_current_tools.txt  pytest.ini  requirements.txt
.github/workflows/: python-app.yml
Database-generation/: 1.Sequence_resource_downloading.sh  2_database-generation_filter.sh  3_database-generation_vsearch.sh  4_database-generation_taxonomy.sh  5.1_database_generation_short_trimimg_order_level.sh  6_seqlogo_plot.R  7_sliding_window_comparation.r  8_sliding_window_comparation.r  Sequence_resource_downloading.sh
Database-generation/test/: Abrothallales.aln  Acarosporales.aln  Acrospermales.aln  Agaricostilbales.aln  (+162 more)
MicroFisher/: MicroFisher.py  run_init_setup.py  setup.py
Package_usage/: A_sample_for_classification.txt  DB_index_build.sh  DBs_stat.sh  Pipeline_usage_and_comparison_NovaSeq.sh
database_generation/: 5.1_database_generation_short_trimimg_order_level.sh  6_seqlogo_plot.R  README.md
demo/: species_list.txt
microfisher/: LICENSE  README.md  pyproject.toml  setup.py
microfisher_package/: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
microfisher_package/demo/: README.md  simulating_50species_3.short_read_abundance.txt  simulating_50species_3.taxonomy.txt  species_list.txt
microfisher_package/demo/Seqences_for_simulating/: Ambrosiozyma_vanderkliftii.fasta  Arachnomyces_pilosus.fasta  Arthrinium_phragmites.fasta  Aspergillus_anthodesmis.fasta  Babjeviella_inositovora.fasta  Bannoa_hahajimensis.fasta  Botryosphaeria_wangensis.fasta  Camarosporidiella_halimodendri.fasta  Capulatispora_sagittiformis.fasta  Caryophylloseptoria_pseudolychnidis.fasta  Cercospora_euphorbiae-sieboldianae.fasta  Chaetomium_subaffine.fasta  Clonostachys_rosea.fasta  Clypeosphaerella_quasiparkii.fasta  Codinaea_yunnanensis.fasta  Colletotrichum_euphorbiae.fasta  Colletotrichum_godetiae.fasta  Colletotrichum_hippeastri.fasta  Conioscypha_bambusicola.fasta  Diaporthe_ambigua.fasta  Diaporthe_sclerotioides.fasta  Dothiora_aloidendri.fasta  Elsinoe_banksiigena.fasta  Endoraecium_disparrimum.fasta  Gloniopsis_calami.fasta  Guyanagaster_necrorhizus.fasta  Helicoarctatus_aquaticus.fasta  Hypomyces_fistulina.fasta  Hypomyces_laeticolor.fasta  Lentithecium_aquaticum.fasta  Lentomitella_magna.fasta  Leucoagaricus_sultanii.fasta  Mucor_pseudolusitanicus.fasta  Neocladosporium_syringae.fasta  Neosetophoma_samarorum.fasta  Neosulcatispora_agaves.fasta  Peroneutypa_indica.fasta  Phacidium_pseudophacidioides.fasta  Psathyrella_secotioides.fasta  Pseudostanjehughesia_lignicola.fasta  (+10 more)
microfisher_package/example/: README.md  species_list_taxonomy.txt
microfisher_package/src/microfisher/: __main__.py  args_subcommand.py  configuration.py  merging_algorithm.py  microfisher.py  output_util.py  run_centrifuge.py  run_combine.py  run_init_setup.py  run_kreport.py  run_merge_reports.py  taxonomy.py  taxonomy_utils.py
microfisher_package/tests/: test_centrifuge.py  test_config.py  test_kreport.py  test_merging_algorithm.py  test_taxonomy.py
performance_evaluation/: 1_DB_index_build.sh  2_generate_mock_community.sh  3_MicroFisher_classification.sh  4.MicroFisher_evaluation.sh  README.md  read.txt
python/: MicroFisher.py  MicroFisherCombineDB.py  README.md  config.py  merging_algorithm.py  output_util.py  requirements.txt  run_centrifuge.py  run_init_setup.py  run_kreport.py  run_merge_reports.py  setup.py  taxanomy.py  taxanomy_utils.py  taxonomy_utils.py
(+138 files in other folders)
