[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microfisher"
version = "0.9.1"
authors = [
    {name = "Steven Wu", email = "stevenwu@ntu.edu.tw"},
    {name = "Haihua Wang", email = "wanghaihua@ufl.edu"}
]
description = "MicroFisher pipeline"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Version Control :: Git"
]
# keywords = one, two

[project.urls]
Homepage = "https://github.com/NFREC-Liao-Lab/MicroFisher-Fungal-Profiling/"
Repository = "https://github.com/NFREC-Liao-Lab/MicroFisher-Fungal-Profiling.git"

[project.scripts]
MicroFisher = "microfisher.microfisher:main"


[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
    "--import-mode=importlib",
]