[metadata]
name = microfisher
author = Steven Wu, Haihua Wang
version = attr: microfisher.__version__
description = MicroFisher pipeline
long_description = file: README.md
long_description_content_type = text/markdown
license = LICENSE
url = https://github.com/NFREC-Liao-Lab/MicroFisher-Fungal-Profiling/
project_urls =
    Bug Tracker = https://github.com/NFREC-Liao-Lab/MicroFisher-Fungal-Profiling/issues
classifiers =
    Programming Language :: Python :: 3,
    License :: OSI Approved :: MIT License,
    Topic :: Database,
    Topic :: Scientific/Engineering :: Bio-Informatics,
    Topic :: Software Development :: Version Control :: Git
# keywords = one, two

[options.entry_points]
console_scripts =
    MicroFisher = microfisher.microfisher:main

[options]
package_dir =
  = src
packages = find:
# python_requires = >=3.6

[options.packages.find]
where = src
